<resources>
    <string name="app_name">MovieGuide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="network_not_available_message">Network is not available!</string>
    <string name="remote_service_connection_error">Cannot load data from remote service!</string>
    <string name="network_error">Cannot connect to the Internet.</string>
    <string name="error_unknown_uri">Unknown URI: </string>
    <string name="error_failed_insert_row">Failed to insert row into URI: </string>
    <string name="menu_title_movies">Movies</string>
    <string name="menu_option_movies">Movies</string>
    <string name="menu_option_discover">Discover</string>
    <string name="menu_option_home">Home</string>
    <string name="menu_option_tv_shows">TV Shows</string>
    <string name="menu_option_top_rated">Top rated</string>
    <string name="menu_option_upcomming">Upcoming</string>
    <string name="menu_option_now_playing">Now playing</string>
    <string name="menu_option_popular">Popular</string>
    <string name="menu_option_favorites">Favorites</string>
    <string name="menu_option_top_rated_movies">Top rated movies</string>
    <string name="menu_option_upcomming_movies">Upcoming movies</string>
    <string name="menu_option_now_playing_movies">Now playing movies</string>
    <string name="menu_option_popular_movies">Popular movies</string>
    <string name="menu_option_favorite_movies">Favorite movies</string>
    <string name="menu_title_tv_shows">TV Shows</string>
    <string name="menu_option_on_the_air">On the air</string>
    <string name="menu_option_popular_tv_shows">Popular TV shows</string>
    <string name="menu_option_top_rated_tv_shows">Top rated TV shows</string>
    <string name="menu_option_on_the_air_tv_shows">On the air TV shows</string>
    <string name="menu_option_favorite_tv_shows">Favorite TV shows</string>
    <string name="title_top_rated">Top rated</string>
    <string name="title_upcomming">Upcoming</string>
    <string name="title_now_playing">Now playing</string>
    <string name="title_popular">Popular</string>
    <string name="title_on_the_air">On the air</string>
    <string name="more">More</string>
    <string name="in_theaters">In Theaters</string>
    <string name="on_tv">On TV</string>
    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="details_view_no_release_date">No release date</string>
    <string name="details_view_no_description">No description</string>
    <string name="details_view_text_minutes">min</string>
    <string name="details_view_text_vote_average_divider">/10</string>
    <string name="favorite_movie_add_message">Add Movie to Favorites</string>
    <string name="favorite_movie_del_message">Remove Movie from Favorites</string>
    <string name="favorite_tvshow_add_message">Add TV Show to Favorites</string>
    <string name="favorite_tvshow_del_message">Remove TV Show from Favorites</string>
    <string name="title_activity_settings">Settings</string>
    <string name="discover_type">Type</string>
    <string name="discover_genres">Genres</string>
    <string name="discover_minimum_rating">Minimum Rating</string>
    <string name="discover_sort">Sort By</string>
    <string name="discover_any_genres">all</string>
    <string name="show">Show</string>
    <string name="title_popularity_desc">Popularity Descending</string>
    <string name="title_popularity_asc">Popularity Ascending</string>
    <string name="title_rating_desc">Rating Descending</string>
    <string name="title_rating_asc">Rating Ascending</string>
    <string name="title_release_date_desc">Release Date Descending</string>
    <string name="title_release_date_asc">Release Date Ascending</string>
    <string-array name="sort">
        <item name="title_popularity_desc">@string/title_popularity_desc</item>
        <item name="title_popularity_asc">@string/title_popularity_asc</item>
        <item name="title_rating_desc">@string/title_rating_desc</item>
        <item name="title_rating_asc">@string/title_rating_asc</item>
        <item name="title_release_date_desc">@string/title_release_date_desc</item>
        <item name="title_release_date_asc">@string/title_release_date_asc</item>
    </string-array>
    <string-array name="sortValuesMovie" translatable="false">
        <item name="sort_popularity_desc">popularity.desc</item>
        <item name="sort_popularity_asc">popularity.asc</item>
        <item name="sort_rating_desc">rating.desc</item>
        <item name="sort_rating_asc">rating.asc</item>
        <item name="sort_release_date_desc">release_date.desc</item>
        <item name="sort_release_date_asc">release_date.asc</item>
    </string-array>
    <string-array name="sortValuesTV" translatable="false">
        <item name="sort_popularity_desc">popularity.desc</item>
        <item name="sort_popularity_asc">popularity.asc</item>
        <item name="sort_rating_desc">rating.desc</item>
        <item name="sort_rating_asc">rating.asc</item>
        <item name="sort_first_air_date_desc">first_air_date.desc</item>
        <item name="sort_first_air_date_asc">first_air_date.asc</item>
    </string-array>
    <string name="restart_dialog_message">Please restart application to apply new settings</string>
    <string name="clear_cache_message_ok">Cache cleared</string>
    <string name="clear_cache_message_fail">The cache is not cleared</string>
    <string name="genres_dialog_title">Genres</string>
    <string name="genre_action">Action</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_animation">Animation</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_documentary">Documentary</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_family">Family</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_history">History</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_music">Music</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_science_fiction">Science Fiction</string>
    <string name="genre_tv_movie">TV Movie</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_war">War</string>
    <string name="genre_western">Western</string>
    <string-array name="genres">
        <item name="title_action">@string/genre_action</item>
        <item name="title_adventure">@string/genre_adventure</item>
        <item name="title_animation">@string/genre_animation</item>
        <item name="title_comedy">@string/genre_comedy</item>
        <item name="title_crime">@string/genre_crime</item>
        <item name="title_documentary">@string/genre_documentary</item>
        <item name="title_drama">@string/genre_drama</item>
        <item name="title_family">@string/genre_family</item>
        <item name="title_fantasy">@string/genre_fantasy</item>
        <item name="title_history">@string/genre_history</item>
        <item name="title_horror">@string/genre_horror</item>
        <item name="title_music">@string/genre_music</item>
        <item name="title_mystery">@string/genre_mystery</item>
        <item name="title_romance">@string/genre_romance</item>
        <item name="genre_science_fiction">@string/genre_science_fiction</item>
        <item name="genre_tv_movie">@string/genre_tv_movie</item>
        <item name="title_thriller">@string/genre_thriller</item>
        <item name="title_war">@string/genre_war</item>
        <item name="title_western">@string/genre_western</item>
    </string-array>
    <string-array name="genresValues" translatable="false">
        <item name="genre_action">28</item>
        <item name="genre_adventure">12</item>
        <item name="genre_animation">16</item>
        <item name="genre_comedy">35</item>
        <item name="genre_crime">80</item>
        <item name="genre_documentary">99</item>
        <item name="genre_drama">18</item>
        <item name="genre_family">10751</item>
        <item name="genre_fantasy">14</item>
        <item name="genre_history">36</item>
        <item name="genre_horror">27</item>
        <item name="genre_music">10402</item>
        <item name="genre_mystery">9648</item>
        <item name="genre_romance">10749</item>
        <item name="genre_science_fiction">878</item>
        <item name="genre_tv_movie">10770</item>
        <item name="genre_thriller">53</item>
        <item name="genre_war">10752</item>
        <item name="genre_western">37</item>
    </string-array>
    <string name="pref_header_general">General</string>
    <string name="pref_max_cast_list" translatable="false">pref_max_cast_list</string>
    <string name="pref_title_max_cast_elements">Maximum cast items</string>
    <string-array name="pref_list_max_cast_elements_titles">
        <item>6 actors</item>
        <item>8 actors</item>
        <item>10 actors</item>
        <item>all actors</item>
    </string-array>
    <string-array name="pref_list_max_cast_elements_values">
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>-1</item>
    </string-array>
    <string name="pref_max_movie_list" translatable="false">pref_max_movie_list</string>
    <string name="pref_title_max_movie_elements">Maximum movie items</string>
    <string-array name="pref_list_max_movie_elements_titles">
        <item>6 movies</item>
        <item>8 movies</item>
        <item>10 movies</item>
        <item>all movies</item>
    </string-array>
    <string-array name="pref_list_max_movie_elements_values">
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>-1</item>
    </string-array>
    <string name="pref_show_main_toolbar">pref_show_main_toolbar</string>
    <string name="pref_title_show_main_toolbar">Show toolbar</string>
    <string name="pref_description_show_main_toolbar">Display main toolbar</string>
    <string name="date">date</string>
    <string name="title">Title</string>
    <string name="character">character</string>
    <string name="settings">Settings</string>
    <string name="send">Send</string>
    <string name="popularity">popularity</string>
    <string name="imdb_raiting">imdb_raiting</string>
    <string name="person">person</string>
    <string name="movie_title">movie title</string>
    <string name="info">Info</string>
    <string name="place_of_birth">Place of birth</string>
    <string name="genre">Genre</string>
    <string name="birthday">Birthday</string>
    <string name="countries">Countries</string>
    <string name="deathday">Deathday</string>
    <string name="movie_duration">movie duration</string>
    <string name="homepage">Homepage</string>
    <string name="imdb_id">imdb_id</string>
    <string name="status">Status</string>
    <string name="budget">Budget</string>
    <string name="movie_credits">Movie Credits</string>
    <string name="revenue">Revenue</string>
    <string name="cast">Cast</string>
    <string name="production_companies">Production Companies</string>
    <string name="crew">Crew</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="title_activity_tvshow">TVShowActivity</string>
    <string name="tvshow_title">TV Show title</string>
</resources>