<!--
     Copyright (C) 2017 Angel Garcia

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_header_general"
        android:key="pref_key_storage_settings_general">
<!--
        // NOTE: EditTextPreference accepts EditText attributes.
        // NOTE: EditTextPreference's summary should be set to its value by the activity code.
        <EditTextPreference
            android:icon="@drawable/ic_info_black_24dp"
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="textCapWords"
            android:key="example_text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name" />
-->
        <SwitchPreference
            android:icon="@drawable/ic_toolbar_black_24dp"
            android:defaultValue="true"
            android:key="@string/pref_show_main_toolbar"
            android:summary="@string/pref_description_show_main_toolbar"
            android:title="@string/pref_title_show_main_toolbar" />

        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <ListPreference
            android:icon="@drawable/ic_boxes_black_24dp"
            android:defaultValue="6"
            android:entries="@array/pref_list_max_cast_elements_titles"
            android:entryValues="@array/pref_list_max_cast_elements_values"
            android:key="@string/pref_max_cast_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_max_cast_elements" />

        <ListPreference
            android:icon="@drawable/ic_boxes_black_24dp"
            android:defaultValue="-1"
            android:entries="@array/pref_list_max_movie_elements_titles"
            android:entryValues="@array/pref_list_max_movie_elements_values"
            android:key="@string/pref_max_movie_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_max_movie_elements" />

    </PreferenceCategory>

<!--
    <PreferenceCategory
        android:title="@string/pref_header_notifications"
        android:key="pref_key_storage_settings_notifications">

        // A 'parent' preference, which enables/disables child preferences (below)
        // when checked/unchecked.
        <SwitchPreference
            android:icon="@drawable/ic_notifications_black_24dp"
            android:defaultValue="true"
            android:key="notifications_new_message"
            android:title="@string/pref_title_new_message_notifications" />

        // Allows the user to choose a ringtone in the 'notification' category.
        // NOTE: This preference will be enabled only when the checkbox above is checked.
        // NOTE: RingtonePreference's summary should be set to its value by the activity code.
        <RingtonePreference
            android:icon="@drawable/ic_notifications_black_24dp"
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone" />

        // NOTE: This preference will be enabled only when the checkbox above is checked.
        <SwitchPreference
            android:icon="@drawable/ic_notifications_black_24dp"
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_vibrate"
            android:title="@string/pref_title_vibrate" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_data_sync"
        android:key="pref_key_storage_settings_data_sync">

        // NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to dismiss it.
        // NOTE: ListPreference's summary should be set to its value by the activity code.
        <ListPreference
            android:icon="@drawable/ic_sync_black_24dp"
            android:defaultValue="180"
            android:entries="@array/pref_sync_frequency_titles"
            android:entryValues="@array/pref_sync_frequency_values"
            android:key="sync_frequency"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_sync_frequency" />

        // This preference simply launches an intent when selected. Use this UI sparingly, per
        //     design guidelines.
        <Preference
            android:icon="@drawable/ic_sync_black_24dp"
            android:title="@string/pref_title_system_sync_settings">
            <intent android:action="android.settings.SYNC_SETTINGS" />
        </Preference>

    </PreferenceCategory>
-->
</PreferenceScreen>
