<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2017 Angel Garcia

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/discover.filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.2"
                android:text="@string/discover_type"
                android:textColor="@color/textcolor"
                android:textSize="18sp"
                tools:text="Type" />

            <RadioGroup
                android:id="@+id/discover.toggle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:background="@drawable/switch_outline"
                android:checkedButton="@+id/radio_movies"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_movies"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/menu_title_movies"
                    android:textColor="@color/colorPrimary" />

                <RadioButton
                    android:id="@+id/radio_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/menu_title_tv_shows"
                    android:textColor="@color/colorPrimary" />
            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/genres.root"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center_vertical"
                android:text="@string/discover_genres"
                android:textColor="@color/textcolor"
                android:textSize="18sp"
                tools:text="Genres" />

            <TextView
                android:id="@+id/discover.genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/discover_any_genres" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/discover_sort"
                android:textColor="@color/textcolor"
                android:textSize="18sp"
                tools:text="Sort" />

            <Spinner
                android:id="@+id/discover.sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/discover.rating_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/discover_minimum_rating"
                android:textColor="@color/textcolor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/discover.rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                tools:text="7" />

            <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/discover.rating_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:max="10" />
        </RelativeLayout>


        <Button
            android:id="@+id/discover.discover"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/round_button"
            android:text="@string/show"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>


</RelativeLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>