<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2017 Angel Garcia

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/home_in_theaters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/touch_effect"
                android:clickable="true"
                android:paddingTop="@dimen/activity_vertical_padding"
                android:paddingBottom="@dimen/activity_vertical_padding"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/movies_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textColor="@color/colorAccent"
                    android:text="@string/in_theaters"
                    tools:text="In Theaters"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/more"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="210dp" >

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_movies"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </android.support.v7.widget.RecyclerView>

                <fr.castorflex.android.circularprogressbar.CircularProgressBar
                    android:id="@+id/progress_bar_movies"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:indeterminate="true"
                    android:layout_centerInParent="true"
                    style="@style/InMovieCircularProgressBar"
                    android:visibility="gone"
                    tools:visibility="visible"/>
            </RelativeLayout>


            <LinearLayout
                android:id="@+id/home_on_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/touch_effect"
                android:clickable="true"
                android:orientation="horizontal"
                android:paddingTop="@dimen/activity_vertical_padding"
                android:paddingBottom="@dimen/activity_vertical_padding"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textColor="@color/colorAccent"
                    android:text="@string/on_tv"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/more"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="210dp" >

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </android.support.v7.widget.RecyclerView>

                <fr.castorflex.android.circularprogressbar.CircularProgressBar
                    android:id="@+id/progress_bar_tv"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:indeterminate="true"
                    android:layout_centerInParent="true"
                    style="@style/InMovieCircularProgressBar"
                    android:visibility="gone"
                    tools:visibility="visible"/>
            </RelativeLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>